Fixing the if / endifs...

--- a/templates/gerrit.config.j2
+++ b/templates/gerrit.config.j2
@@ -31,9 +31,8 @@
 [gitweb]
 	type = gitweb
 	cgi = {{ gitweb_cgi_path }}
-{% if gerrit_auth_type == "LDAP_BIND" %}
 
-{% if gerrit_ldap_info is defined %}
+{% if gerrit_auth_type == "LDAP_BIND" and gerrit_ldap_info is defined %}
 [ldap]
 {% set item = gerrit_ldap_info %}
 {% if item.server is defined %}
