--- a/templates/gerrit.config.j2
+++ b/templates/gerrit.config.j2
@@ -5,6 +5,9 @@
 {% elif gerrit_canonical_web_url is defined %}
 	canonicalWebUrl = {{ gerrit_canonical_web_url }}
 {% endif %}
+{% if gerrit_server_id is defined %}
+        serverId = {{ gerrit_server_id }}
+{% endif %}
 
 [database]
 {% for item in gerrit_db_info %}
