Add nocanon directive ... to just fix gerrit when behind Apache proxy

--- a/templates/etc/apache2/sites-available/gerrit.conf.j2
+++ b/templates/etc/apache2/sites-available/gerrit.conf.j2
@@ -20,6 +20,6 @@
   ProxyRequests Off
   ProxyPreserveHost On
   ProxyPass /gitweb !
-  ProxyPass / http://localhost:{{ gerrit_http_listen_port }}/
+  ProxyPass / http://localhost:{{ gerrit_http_listen_port }}/ nocanon
   ProxyPassReverse / http://localhost:{{ gerrit_http_listen_port }}/
 </VirtualHost>
